kubernetes/renderer-autoscaler.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: renderer-autoscaler
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: renderer-autoscaler
    spec:
      serviceAccountName: renderer-autoscaler
      containers:
      - name: renderer-autoscaler
        image: onfido/k8s-rabbit-pod-autoscaler
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
