kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      restartPolicy: Always
      containers:
      - name: api
        image: vitaes/api
        command: ['python3', 'Server.py']
        imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: NodePort
  ports:
  - port: 6000
  selector:
    app: api
