kubernetes/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      restartPolicy: Always
      containers:
      - name: webapp
        image: vitaes/webapp
        imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: webapp
