kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vitaes.io
    http:
      paths:
      - backend:
          serviceName: webapp
          servicePort: 80
  - host: api.vitaes.io
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 6000
  - host: storage.vitaes.io
    http:
      paths:
      - backend:
          serviceName: storage
          servicePort: 6000
  - host: logger.vitaes.io
    http:
      paths:
      - backend:
          serviceName: logger
          servicePort: 6000

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-internal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: internal-services
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - host: sqlite.vitaes.io
    http:
      paths:
      - backend:
          serviceName: sqlite-web
          servicePort: 8080
  - host: grafana.vitaes.io
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
  - host: phpmyadmin.vitaes.io
    http:
      paths:
      - backend:
          serviceName: phpmyadmin
          servicePort: 80
